##===- CMakeLists.txt - Add the cpp files ---------------------*- cmake -*-===//
##
##===----------------------------------------------------------------------===//

add_subdirectory(CAPI)
add_subdirectory(Conversion)
add_subdirectory(Dialect)
add_subdirectory(Support)
add_subdirectory(Translation)
