##===- CMakeLists.txt - Add the cpp files ---------------------*- cmake -*-===//
##
##===----------------------------------------------------------------------===//

add_subdirectory(Bindings)
add_subdirectory(CAPI)
add_subdirectory(Conversion)
add_subdirectory(Dialect)
add_subdirectory(Query)
add_subdirectory(Scheduling)
add_subdirectory(Support)
add_subdirectory(Transforms)
add_subdirectory(Translation)
