add_subdirectory(arcilator)
add_subdirectory(circt-as)
add_subdirectory(circt-bmc)
add_subdirectory(circt-cocotb-driver)
add_subdirectory(circt-dis)
add_subdirectory(circt-lec)
add_subdirectory(circt-lsp-server)
add_subdirectory(circt-opt)
add_subdirectory(circt-reduce)
add_subdirectory(circt-rtl-sim)
add_subdirectory(circt-synth)
add_subdirectory(circt-test)
add_subdirectory(circt-translate)
add_subdirectory(domaintool)
add_subdirectory(firld)
add_subdirectory(firtool)
add_subdirectory(handshake-runner)
add_subdirectory(hlstool)
add_subdirectory(kanagawatool)
add_subdirectory(om-linker)
add_subdirectory(py-split-input-file)

if(CIRCT_SLANG_FRONTEND_ENABLED)
  add_subdirectory(circt-verilog)
  add_subdirectory(circt-verilog-lsp-server)
endif()
