cmake_minimum_required(VERSION 3.20.0)
project(circt-standalone LANGUAGES CXX C)

set(CMAKE_BUILD_WITH_INSTALL_NAME_DIR ON)

set(CMAKE_CXX_STANDARD 17 CACHE STRING "C++ standard to conform to")
set(CMAKE_CXX_STANDARD_REQUIRED YES)

if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
  find_package(CIRCT REQUIRED CONFIG)

  message(STATUS "Using CIRCTConfig.cmake in: ${CIRCT_DIR}")
  message(STATUS "Using MLIRConfig.cmake in: ${MLIR_DIR}")
  message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")

  set(LLVM_RUNTIME_OUTPUT_INTDIR ${CMAKE_BINARY_DIR}/bin)
  set(LLVM_LIBRARY_OUTPUT_INTDIR ${CMAKE_BINARY_DIR}/lib)
  set(MLIR_BINARY_DIR ${CMAKE_BINARY_DIR})

  list(APPEND CMAKE_MODULE_PATH "${CIRCT_CMAKE_DIR}")
  list(APPEND CMAKE_MODULE_PATH "${MLIR_CMAKE_DIR}")
  list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")

  include(TableGen)
  include(AddLLVM)
  include(AddMLIR)
  include(AddCIRCT)
  include(HandleLLVMOptions)
endif()

set(CIRCT_STANDALONE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(CIRCT_STANDALONE_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})

include_directories(${LLVM_INCLUDE_DIRS})
include_directories(${MLIR_INCLUDE_DIRS})
include_directories(${CIRCT_INCLUDE_DIRS})
include_directories(${CIRCT_STANDALONE_SOURCE_DIR}/include)
include_directories(${CIRCT_STANDALONE_BINARY_DIR}/include)
link_directories(${LLVM_BUILD_LIBRARY_DIR})
link_directories(${CIRCT_LIBRARY_DIRS})
add_definitions(${LLVM_DEFINITIONS})

option(CIRCT_STANDALONE_INCLUDE_TESTS
  "Generate build targets for the CIRCT standalone tests." ON)

add_subdirectory(include)
add_subdirectory(lib)
add_subdirectory(circt-standalone-opt)
set(CIRCT_STANDALONE_HAS_PLUGIN OFF)
if(NOT WIN32 AND TARGET circt-opt)
  add_subdirectory(circt-standalone-plugin)
  set(CIRCT_STANDALONE_HAS_PLUGIN ON)
endif()
if(CIRCT_STANDALONE_INCLUDE_TESTS)
  add_subdirectory(test)
endif()
