[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm>=6.2",
    "wheel",
    "cmake>=3.12",
    
    # MLIR build depends.
    "numpy",
    "pybind11>=2.7.1",
    "PyYAML",

    # PyCDE depends
    "cocotb>=1.6.2",
    "cocotb-test>=0.2.2",
    "jinja2"
]
build-backend = "setuptools.build_meta"

# Enable version inference from Git.
[tool.setuptools_scm]
root = "../.."
relative_to = "setup.py"
tag_regex = "^pycde-(\\d+\\.\\d+\\.\\d+)?$"
local_scheme = "no-local-version"
git_describe_command = "git describe --dirty --tags --long --match pycde*"

[tool.cibuildwheel]
manylinux-x86_64-image = "ghcr.io/circt/images/pycde-build"

[tool.cibuildwheel.linux]
# Disable auditwheel repair. It screws up some of the .so collateral.
repair-wheel-command = "cp {wheel} {dest_dir}"
